# ServiceWithNavController

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wrsft/servicewithnavcontroller/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/impl/: app.cpp  appWebHandlers.cpp  entry.cpp  epoller.cpp  httpdefinitions.cpp  stringHelper.cpp  webServer.tpp
app/src/main/cpp/includes/: app.h  baseService.h  epoller.h  globalfix.h  httpdefinitions.h  sslHandler.h  stringHelper.h  webServer.h
app/src/main/cpp/includes/android/: ScopedFd.h
app/src/main/cpp/includes/fs/: fs_fwd.hpp  fs_impl.hpp  fs_std.hpp  fs_std_fwd.hpp  fs_std_impl.hpp
app/src/main/cpp/includes/morris/: ifaddrs.c  ifaddrs.h
app/src/main/cpp/submodules/boringssl/include/openssl/: ssl.h
app/src/main/java/com/wrsft/servicewithnavcontroller/: AutoStarter.kt  ForegroundService.kt  LandingFragment.kt  LogsFragment.kt  MainActivity.kt  NativeWrapper.kt  ViewModel.kt
app/src/main/res/layout/: activity_main.xml  fragment_landing.xml  fragment_logs.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/raw/: cert.pem  index.html  indexbrot.brot  key.pem
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wrsft/servicewithnavcontroller/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
